--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,5 +30,27 @@
 
 	</head>
 	<body>
+
+		<header class="content-header">
+			<nav class="nav navbar">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.php">Ginnie Brown</a>
+					<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#my-navbar"
+							  aria-expanded="false">
+						<span class="sr-only">Main Menu</span>
+						<span class="glyphicon glyphicon-menu-hamburger"></span>
+					</button>
+				</div>
+				​
+				​
+				<div class="collapse navbar-collapse navbar-right" id="my-navbar">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html" class="menu-item">Home</a></li>
+						<li><a href=# class="menu-item">About</a></li>
+						<li><a href=# class="menu-item">Contact</a></li>
+				</div>
+				</ul>
+			</nav>
+		</header>
 	</body>
 </html>
